--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.tarithj.cash_leaf">
    <application
-        android:label="cash_leaf"
+        android:label="Cash Leaf"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
